# oj-eval-codex-069-20260401230127

./: .gitignore  CMakeLists.txt
local_test/: CMakeLists.txt
src/: main.cpp  template.h  test.cpp
